--- a/.github/workflows/.github/workflows/ci.yml
+++ b/.github/workflows/.github/workflows/ci.yml
@@ -3,13 +3,26 @@ name: C++ CI Pipeline
 on: [push]
 
 jobs:
-  build:  # 缩进 2 格
-    runs-on: ubuntu-latest  # 缩进 4 格
+  build:
+    runs-on: ubuntu-latest
 
-    steps:  # 缩进 4 格
-    - uses: actions/checkout@v3  # 缩进 4 格 (短横线对齐 steps)
+    steps:
+      - uses: actions/checkout@v3
 
-    - name: Install build tools
-      run: |  # run 和 name 对齐
-        sudo apt update
-        sudo apt install -y cmake g++
+      - name: Install build tools
+        run: |
+          sudo apt update
+          sudo apt install -y cmake g++
+
+      - name: Configure project
+        run: |
+          cmake -S . -B build
+
+      - name: Build project
+        run: |
+          cmake --build build
+
+      - name: Run tests
+        run: |
+          cd build
+          ctest --output-on-failure
